fix: align progress bar with new tx button (#2274)

--- a/src/components/tx-flow/flows/NewTx/styles.module.css
+++ b/src/components/tx-flow/flows/NewTx/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin-top: 72px;
+  margin-top: 50px;
 }
 
 .chain {
